=======
CHANGES
=======

-----
0.6.5
-----

* Distribute no longer shadows setuptools if we require a 0.7-series
  setuptools. 

* When run from within buildout, no attempt is made to modify an existing
  setuptools egg, whether in a shared egg directory or a system setuptools.

* Fixed a hole in sandboxing allowing builtin file to write outside of
  the sandbox.

-----
0.6.4
-----

* Added the generation of `distribute_setup_3k.py` during the release.
  This close http://bitbucket.org/tarek/distribute/issue/52.

* Added an upload_docs command to easily upload project documentation to
  PyPI's http://packages.python.org.
  This close http://bitbucket.org/tarek/distribute/issue/56.

* Fixed a bootstrap bug on the use_setuptools() API.

-----
0.6.3
-----

setuptools
==========

* Fixed a bunch of calls to file() that caused crashes on Python 3.

bootstrapping
=============

* Fixed a bug in sorting that caused bootstrap to fail on Python 3.

-----
0.6.2
-----

setuptools
==========

* Added Python 3 support; see docs/python3.txt.
  This closes http://bugs.python.org/setuptools/issue39.

* Added option to run 2to3 automatically when installing on Python 3.
  This closes http://bitbucket.org/tarek/distribute/issue/31.

* Fixed invalid usage of requirement.parse, that broke develop -d.
  This closes http://bugs.python.org/setuptools/issue44.

* Fixed script launcher for 64-bit Windows.
  This closes http://bugs.python.org/setuptools/issue2.

* KeyError when compiling extensions.
  This closes http://bugs.python.org/setuptools/issue41.

bootstrapping
=============

* Fixed bootstrap not working on Windows.
  This closes http://bitbucket.org/tarek/distribute/issue/49.

* Fixed 2.6 dependencies.
  This closes http://bitbucket.org/tarek/distribute/issue/50.

* Make sure setuptools is patched when running through easy_install
  This closes http://bugs.python.org/setuptools/issue40.

-----
0.6.1
-----

setuptools
==========
